[gd_scene load_steps=4 format=3 uid="uid://c2aqaph0fpnb1"]

[ext_resource type="Script" uid="uid://d34dm1fnjrjww" path="res://Scripts/pause_manager.gd" id="1_s3tu7"]
[ext_resource type="Theme" uid="uid://qw5wdr2jerv7" path="res://Art/text/default_font.tres" id="2_8elxi"]
[ext_resource type="Script" uid="uid://bjt8rmiojl6gr" path="res://Scripts/volume_slider.gd" id="4_6xe1p"]

[node name="PauseManager" type="Node2D"]
process_mode = 2
z_index = 5
script = ExtResource("1_s3tu7")

[node name="PauseMenu" type="CanvasLayer" parent="."]
layer = 3

[node name="ColorRect" type="ColorRect" parent="PauseMenu"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.051971, 0.051971, 0.051971, 0.741176)

[node name="RichTextLabel" type="RichTextLabel" parent="PauseMenu"]
anchors_preset = -1
anchor_top = 0.044
anchor_right = 1.0
anchor_bottom = 0.12
grow_horizontal = 2
size_flags_horizontal = 0
theme = ExtResource("2_8elxi")
theme_override_font_sizes/normal_font_size = 56
text = "Game paused"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RichTextLabel2" type="RichTextLabel" parent="PauseMenu"]
anchors_preset = -1
anchor_top = 0.12
anchor_right = 1.0
anchor_bottom = 0.161
grow_horizontal = 2
size_flags_horizontal = 0
theme = ExtResource("2_8elxi")
theme_override_font_sizes/normal_font_size = 31
text = "Press escape to continue"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PageTabs" type="TabContainer" parent="PauseMenu"]
anchors_preset = -1
anchor_left = 0.02
anchor_top = 0.187
anchor_right = 0.98
anchor_bottom = 0.97
theme = ExtResource("2_8elxi")
theme_override_font_sizes/font_size = 40
tab_alignment = 1
current_tab = 1

[node name="Emotions" type="HBoxContainer" parent="PauseMenu/PageTabs"]
visible = false
layout_mode = 2
alignment = 1
metadata/_tab_index = 0

[node name="NoSpellsLabel" type="RichTextLabel" parent="PauseMenu/PageTabs/Emotions"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/normal_font_size = 66
text = "No emotions equipped... :("
horizontal_alignment = 1
vertical_alignment = 1

[node name="Sensations" type="Control" parent="PauseMenu/PageTabs"]
layout_mode = 2
metadata/_tab_index = 1

[node name="RelicGrid" type="GridContainer" parent="PauseMenu/PageTabs/Sensations"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.035
anchor_top = 0.041
anchor_right = 0.458
anchor_bottom = 0.963

[node name="NoRelicsLabel" type="RichTextLabel" parent="PauseMenu/PageTabs/Sensations"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.035
anchor_top = 0.041
anchor_right = 0.458
anchor_bottom = 0.963
text = "No relics stinky :("
horizontal_alignment = 1
vertical_alignment = 1

[node name="RelicDescription" type="RichTextLabel" parent="PauseMenu/PageTabs/Sensations"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.576
anchor_top = 0.195
anchor_right = 0.993
anchor_bottom = 0.679
offset_left = 0.447937
offset_right = 0.0639648
text = "Choose a sensation to reflect on"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RelicFlavor" type="RichTextLabel" parent="PauseMenu/PageTabs/Sensations"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.576
anchor_top = 0.75
anchor_right = 0.993
anchor_bottom = 0.987
offset_left = 0.447937
offset_right = 0.0639648
horizontal_alignment = 1
vertical_alignment = 1

[node name="RelicName" type="RichTextLabel" parent="PauseMenu/PageTabs/Sensations"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.576
anchor_top = 0.005
anchor_right = 0.993
anchor_bottom = 0.159
horizontal_alignment = 1
vertical_alignment = 1

[node name="QuitButton" type="Button" parent="PauseMenu"]
anchors_preset = -1
anchor_left = 0.033
anchor_top = 0.08
anchor_right = 0.247
anchor_bottom = 0.142
text = "Return to menu"

[node name="VolumeSlider" type="HSlider" parent="PauseMenu"]
anchors_preset = -1
anchor_left = 0.72
anchor_top = 0.062
anchor_right = 0.96
anchor_bottom = 0.098
grow_horizontal = 0
max_value = 1.0
step = 0.05
script = ExtResource("4_6xe1p")

[node name="RichTextLabel" type="RichTextLabel" parent="PauseMenu/VolumeSlider"]
layout_mode = 1
anchors_preset = -1
anchor_top = -1.228
anchor_right = 1.0
anchor_bottom = -0.241
offset_top = -0.212795
offset_right = 6.10352e-05
offset_bottom = -0.191599
grow_horizontal = 2
grow_vertical = 2
text = "Volume"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="PauseMenu/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="mouse_exited" from="PauseMenu/VolumeSlider" to="PauseMenu/VolumeSlider" method="release_focus"]
[connection signal="value_changed" from="PauseMenu/VolumeSlider" to="PauseMenu/VolumeSlider" method="_on_value_changed"]
